--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,7 +154,7 @@ h6 {
 .header .header-container {
   background: var(--surface-color);
   border-radius: 50px;
-  opacity: 0.9;
+  opacity: 0.9;	
   padding: 0px 15px 0px 10px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
@@ -838,26 +838,42 @@ section,
   margin: 0;
 }
 
+  .custom-video {
+	width:100%;
+  }
+
 @media (max-width: 1200px) {
   .hero .main-heading h1 {
     font-size: 4rem;
   }
+  
+
 }
 
 @media (max-width: 767px) {
   .hero .main-heading h1 {
     font-size: 3rem;
   }
+  
+  .hero .main-content {
+	 padding: 0px 4rem !important;
+  }
   .custom-video {
+	width:auto !important;
 	height: 100vh;
   }
 }
 
 @media (max-width: 480px) {
   .hero .main-heading h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
+  }
+  
+  .hero .main-content {
+	 padding: 0px 4rem !important;
   }
     .custom-video {
+	width:auto !important;
 	height: 100vh;
   }
 }
