--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,18 +156,18 @@ h6 {
   background: var(--surface-color);
   border-radius: 50px;
   opacity: 0.9;	
-  padding: 0px 15px 0px 10px;
+  padding: 0px 30px 0px 30px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 .header .logo {
   line-height: 1;
 }
-
-.header .logo img {
+ 
+/* .header .logo img {
   max-height: 140px;
   margin-right: 8px;
-}
+} */
 
 .header .logo h1 {
   font-size: 20px;
