--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -853,7 +853,7 @@ section,
 
 @media (max-width: 767px) {
   .hero .main-heading h1 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   
   .hero .main-content {
@@ -867,7 +867,7 @@ section,
 
 @media (max-width: 480px) {
   .hero .main-heading h1 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   
   .hero .main-content {
@@ -1066,10 +1066,10 @@ section,
 .about .about-image .experience-badge {
   position: absolute;
   bottom: 30px;
-  right: -30px;
-  background: var(--accent-color);
+  right: -10px;
+  background: #841326e0;
   color: var(--contrast-color);
-  padding: 1.5rem;
+  padding: 1rem;
   border-radius: 8px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -1077,7 +1077,7 @@ section,
 }
 
 .about .about-image .experience-badge .years {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 1;
   display: block;
@@ -1126,7 +1126,7 @@ section,
 }
 
 .about .about-content .feature-item {
-  padding: 1.25rem;
+  padding: 0.7rem;
   background-color: var(--surface-color);
   border-radius: 8px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
@@ -1183,7 +1183,7 @@ section,
 }
 
 .about .testimonial-section .testimonial-intro .mission-statement {
-  font-size: 36px;
+  font-size: 28px;
 }
 
 
@@ -1200,8 +1200,56 @@ section,
 }
 
 
+.m-scroll {
+  display: flex;
+  position: relative;
+  /* width: 800px; */
+  height: 30px;
+  margin: auto;
+  background-color: #D34444;
+  overflow: hidden;
+  z-index: 1;
+}
+.m-scroll .title {
+    display: flex;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+    white-space: nowrap;
+    transform: scale(2);
+    transition: all 1s ease;
+}
+  .m-scroll .heading {
+      display: flex;
+      animation: scrollText 10s infinite linear;
+    }
+   .m-scroll   h1 {
+      margin: 0;
+      font-size: 12px;
+      color: rgba(255,255,255,1);
+      transition: all 1s ease;
+      }
+      .m-scroll  a {
+        text-decoration:none;
+        color:white;
+        }
+    .m-scroll    a:hover{
+        -webkit-text-stroke: 1px white;
+        color: transparent;
+      }
+ 
 
-
+/*div:hover {
+  animation-play-state: paused;
+}*/
+@keyframes scrollText {
+  from   { transform: translateX(0%); }
+  to { transform: translateX(-50%); }
+}
 
 
 
@@ -2623,7 +2671,6 @@ section,
 
 .contact .form-container-overlap {
   position: relative;
-  margin-top: -150px;
   margin-bottom: 60px;
   z-index: 10;
 }
@@ -2738,7 +2785,7 @@ section,
 
 @media (max-width: 992px) {
   .contact .form-container-overlap {
-    margin-top: -120px;
+    /* margin-top: -120px; */
   }
 
   .contact .contact-form-wrapper {
@@ -2752,7 +2799,7 @@ section,
   }
 
   .contact .form-container-overlap {
-    margin-top: -100px;
+    /* margin-top: -100px; */
   }
 
   .contact .contact-form-wrapper {
@@ -2770,7 +2817,7 @@ section,
 
 @media (max-width: 576px) {
   .contact .form-container-overlap {
-    margin-top: -80px;
+    /* margin-top: -80px; */
   }
 
   .contact .contact-form-wrapper {
