--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,9 +12,9 @@
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
-  --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --heading-font: "Nunito Sans",  sans-serif;
-  --nav-font: "Raleway",  sans-serif;
+  --default-font: 'Chronicle Display', sans-serif, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --heading-font: "Chronicle Display",  sans-serif;
+  --nav-font: "Chronicle Display",  sans-serif;
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
@@ -65,6 +65,7 @@ body {
   background-color: var(--background-color);
   font-family: var(--default-font);
   text-align: justify;
+   font-weight: 300;
 }
 
 a {
@@ -86,6 +87,7 @@ h5,
 h6 {
   color: var(--heading-color);
   font-family: var(--heading-font);
+  font-weight: 300;
 }
 
 /* PHP Email Form Messages
@@ -246,9 +248,9 @@ h6 {
   .navmenu a:focus {
     color: var(--nav-color);
     padding: 18px 15px;
-    font-size: 16px;
+    font-size: 18px;
     font-family: var(--nav-font);
-    font-weight: 400;
+    font-weight: 300;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -486,8 +488,8 @@ h6 {
 
 .footer .footer-about .logo span {
   color: var(--heading-color);
-  font-size: 30px;
-  font-weight: 700;
+  font-size: 40px;
+  font-weight: 400;
   letter-spacing: 1px;
   font-family: var(--heading-font);
 }
@@ -654,6 +656,7 @@ h6 {
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
+	text-align: start;
   }
 }
 
@@ -764,8 +767,8 @@ section,
   color: var(--heading-color);
   margin: 0;
   margin: 0;
-  font-size: 28px;
-  font-weight: 700;
+  font-size:40px;
+  font-weight: 300;
   text-transform: uppercase;
   font-family: var(--heading-font);
 }
@@ -832,8 +835,8 @@ section,
 }
 
 .hero .main-heading h1 {
-  font-size: 3rem;
-  font-weight: 800;
+  font-size: 51px;
+  font-weight: 400;
   line-height: 1.1;
   letter-spacing: -1px;
   margin: 0;
@@ -897,10 +900,11 @@ section,
 }
 
 .hero .description p {
-  font-size: 1rem;
-  line-height: 1.7;
-  color: white;
-  margin: 0;
+	font-size: 18px;
+    line-height: 1.7;
+    color: white;
+    margin: 0;
+    font-weight: 100;
 }
 
 .hero .cta-button .btn {
@@ -1106,7 +1110,7 @@ section,
 .about .about-content h2 {
   font-size: 2.2rem;
   margin-bottom: 1.25rem;
-  font-weight: 700;
+  font-weight: 300;
 }
 
 @media (max-width: 768px) {
@@ -1123,6 +1127,7 @@ section,
 
 .about .about-content p {
   margin-bottom: 1rem;
+  font-weight: 300;
 }
 
 .about .about-content .feature-item {
@@ -1149,7 +1154,7 @@ section,
 .about .about-content .feature-item h5 {
   font-size: 1.15rem;
   margin-bottom: 0.75rem;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 .about .about-content .feature-item p {
@@ -1206,7 +1211,7 @@ section,
   /* width: 800px; */
   height: 30px;
   margin: auto;
-  background-color: #D34444;
+  background: var(--accent-color);
   overflow: hidden;
   z-index: 1;
 }
@@ -1267,7 +1272,7 @@ section,
 .services .service-header .service-intro .service-heading {
   font-size: 48px;
   margin-bottom: 0;
-  font-weight: 700;
+  font-weight: 300;
   line-height: 1.2;
   color: var(--heading-color);
 }
@@ -1359,7 +1364,7 @@ section,
 .services .service-card h3 {
   font-size: 28px;
   margin-bottom: 15px;
-  font-weight: 700;
+  /* font-weight: 700; */
 }
 
 .services .service-card h3 a {
@@ -1564,7 +1569,7 @@ section,
 .steps h3 {
   font-size: 1.3rem;
   margin-bottom: 15px;
-  font-weight: 600;
+  /* font-weight: 600; */
   color: var(--heading-color);
 }
 
@@ -2683,11 +2688,16 @@ section,
 }
 
 .contact .contact-form-wrapper h2 {
-  font-size: 28px;
-  font-weight: 700;
+  /* font-size: 28px; */
+  /* font-weight: 700; */
   margin-bottom: 30px;
   position: relative;
 }
+
+.contact p {
+  font-size: 22px;
+  font-weight: 300;
+ }
 
 .contact .contact-form-wrapper h2:after {
   content: "";
