--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -783,6 +783,7 @@ section,
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   overflow: hidden;
   padding: 0;
 }
@@ -831,13 +832,14 @@ section,
 }
 
 .hero .main-heading {
-  margin-bottom: 2rem;
+  margin-bottom: 6rem;
   /* margin-top: 4rem; */
 }
 
 .hero .main-heading h1 {
   font-size: 42px;
   font-weight: 400;
+  text-shadow: 1px 1px 5px #ffffff, 0 0 5px #ffffff, 0 0 5px #ffffff;
   line-height: 1.1;
   letter-spacing: -1px;
   margin: 0;
@@ -1212,7 +1214,7 @@ section,
   /* width: 800px; */
   height: 30px;
   margin: auto;
-  background: var(--accent-color);
+  background: linear-gradient(to left, #d70b2de3, #841326 85%);
   overflow: hidden;
   z-index: 1;
 }
@@ -1231,7 +1233,7 @@ section,
 }
   .m-scroll .heading {
       display: flex;
-      animation: scrollText 10s infinite linear;
+      animation: scrollText 20s infinite linear;
     }
    .m-scroll   h1 {
       margin: 0;
