--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,6 +143,25 @@ h6 {
   }
 }
 
+.whats-app {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 15px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 1px 2px 15px #999;
+    right: 65px;
+    z-index: 100;
+}
+
+.my-float {
+    margin-top: 10px;
+}
+
 /*--------------------------------------------------------------
 # Global Header
 --------------------------------------------------------------*/
