--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -929,14 +929,38 @@ section,
     font-weight: 100;
 }
 
+.hero .position-absolute {
+	z-index: 9999;
+}
+
+.hero .phone-btn  {
+	font-size: 18px;
+}
+
+.hero .cta-button  {
+	text-align: center;
+}
+
+.hero .phone-icon {
+	border: 1px solid white;
+    border-radius: 50px;
+    padding: 14px;
+    color: white;
+}
+
+.hero .phone-no {
+	color: white;
+    margin-left: 29px;
+}
+
 .hero .cta-button .btn {
   display: inline-flex;
   align-items: center;
-  background-color: transparent;
+  background-color: #841326;
   border: 1px solid color-mix(in srgb, var(--default-color), transparent 40%);
   color: white;
   padding: 0.75rem 1.5rem;
-  border-radius: 50px;
+  border-radius: 10px;
   font-size: 0.9rem;
   font-weight: 600;
   letter-spacing: 1px;
